# rtr2025

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BLENDER_GUIDE.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  build.bat
assets/: cyberpunk_city.blend  cyberpunk_city.glb  test_city.glb
include/engine/window_observers/: camera_movement_observer.hpp  default_observer.hpp
include/pch/: pch_glm.hpp  pch_vulkan.hpp
include/rhi/: exception.hpp  instance.hpp  logical_device.hpp  physical_device.hpp  queue.hpp  structs.hpp  window.hpp
include/utils/: string_utils.hpp
shaders/: closest_hit.rchit  frag.glsl  miss.rmiss  ray_gen.rgen  vert.glsl
src/: Application.cpp  Application.h  AssetLoader.cpp  AssetLoader.h  Camera.cpp  Camera.h  GLTFLoader.cpp  GLTFLoader.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  SimpleRenderer.cpp  SimpleRenderer.h  main.cpp
